2010-07-27  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* Mono.Addins/aaa.cs:
	* Mono.Addins.csproj:
	* Mono.Addins/AddinAttribute.cs: Canvi

2010-07-27  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins/Addin.cs: tyui

2010-07-27  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins/Addin.cs: es

2010-07-27  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins/AddinAuthorAttribute.cs: yy

2010-07-26  lluis  <${AuthorEmail}>

	* Makefile.am:
	* Mono.Addins.csproj:
	* Mono.Addins.dll.config: 

2010-07-26  lluis  <${AuthorEmail}>

	* Mono.Addins/Addin.cs: Un nou comentari.

2010-07-01  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.csproj:
	* Mono.Addins.Description/Extension.cs:
	* Mono.Addins.Description/Dependency.cs:
	* Mono.Addins.Description/AddinFlags.cs:
	* Mono.Addins.Description/ExtensionPoint.cs:
	* Mono.Addins.Description/AddinDependency.cs:
	* Mono.Addins.Description/AddinDescription.cs:
	* Mono.Addins.Description/ExtensionNodeSet.cs:
	* Mono.Addins.Description/NativeDependency.cs:
	* Mono.Addins.Localization/IAddinLocalizer.cs:
	* Mono.Addins.Description/ObjectDescription.cs:
	* Mono.Addins.Description/ModuleDescription.cs:
	* Mono.Addins.Description/ExtensionNodeType.cs:
	* Mono.Addins.Description/NodeTypeAttribute.cs:
	* Mono.Addins.Description/AssemblyDependency.cs:
	* Mono.Addins.Description/ExtensionCollection.cs:
	* Mono.Addins.Description/DependencyCollection.cs:
	* Mono.Addins.Localization/IPluralAddinLocalizer.cs:
	* Mono.Addins.Localization/IAddinLocalizerFactory.cs:
	* Mono.Addins.Description/ExtensionNodeDescription.cs:
	* Mono.Addins.Description/ExtensionPointCollection.cs:
	* Mono.Addins.Description/ConditionTypeDescription.cs:
	* Mono.Addins.Description/ExtensionNodeSetCollection.cs:
	* Mono.Addins.Description/ModuleDescriptionCollection.cs:
	* Mono.Addins.Description/NodeTypeAttributeCollection.cs:
	* Mono.Addins.Description/ExtensionNodeTypeCollection.cs: